--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "build": "cd android && ./gradlew assembleRelease",
+    "clean": "cd android && ./gradlew clean"
   },
   "dependencies": {
     "react": "18.0.0",
-    "react-native": "0.69.12"
+    "react-native": "0.69.12",
+    "react-native-image-crop-picker": "^0.40.3",
+    "react-native-paper": "^5.12.3",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -19,26 +24,24 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "@types/react-native-vector-icons": "^6.4.18",
     "formik": "^2.4.5",
     "react": "18.2.0",
-    "react-native": "0.73.6",
     "react-hook-form": "^7.46.2",
-    "react-native-document-picker": "^9.0.1",
-    "react-native-image-crop-picker": "^0.39.0",
-    "react-native-modal": "^13.0.1",
-    "react-native-modal-selector": "^2.1.2",
-    "react-native-push-notification": "^8.1.1",
-    "react-native-toast-notifications": "^3.4.0",
-    "react-redux": "^8.0.7",
-    "redux-saga": "^1.2.3",
+    "react-native": "0.73.6",
     "react-native-confirmation-code-field": "^7.4.0",
+    "react-native-document-picker": "^9.0.1",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
+    "react-native-modal-selector": "^2.1.2",
     "react-native-pager-view": "^6.3.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-notifications": "^3.4.0",
+    "react-redux": "^8.0.7",
+    "redux-saga": "^1.2.3",
     "yup": "^1.4.0"
   },
   "jest": {
