--- a/package.json
+++ b/package.json
@@ -12,22 +12,18 @@
     "clean": "cd android && ./gradlew clean"
   },
   "dependencies": {
-    "react": "18.0.0",
-    "react-native": "0.69.12",
-    "react-native-image-crop-picker": "^0.40.3",
-    "react-native-paper": "^5.12.3",
-    "react-native-vector-icons": "^10.0.3"
-  },
-  "devDependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "react": "18.0.0",
+    "react-native": "0.69.12",
+    "react-native-image-crop-picker": "^0.40.3",
+    "react-native-paper": "^5.12.3",
+    "react-native-vector-icons": "^10.0.3",
     "formik": "^2.4.5",
-    "react": "18.2.0",
     "react-hook-form": "^7.46.2",
-    "react-native": "0.73.6",
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-document-picker": "^9.0.1",
     "react-native-gesture-handler": "^2.16.0",
@@ -43,6 +39,24 @@
     "react-redux": "^8.0.7",
     "redux-saga": "^1.2.3",
     "yup": "^1.4.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.11",
+    "@tsconfig/react-native": "^3.0.0",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
+    "eslint": "^8.19.0",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.76.8",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
+
   },
   "jest": {
     "preset": "react-native"
