--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-vector-icons": "^10.0.3",
     "formik": "^2.4.5",
+    "axios": "^1.4.0",
     "react-hook-form": "^7.46.2",
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-document-picker": "^9.0.1",
@@ -39,9 +40,10 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-redux": "^9.1.1",
+    "react-redux": "^8.0.7",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.3.0",
+    "redux-saga": "^1.2.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
