--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,9 @@
 apply plugin: "com.android.application"
-apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
-import com.android.build.OutputFile
+apply plugin: "com.google.gms.google-services"
+apply plugin: "com.facebook.react"
 
+import com.android.build.OutputFile
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
  * and bundleReleaseJsAndAssets).
