--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/push-notification-ios": "^1.11.0",
+    "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/messaging": "^18.8.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -23,6 +26,7 @@
     "react-hook-form": "^7.46.2",
     "react-native": "0.69.12",
     "react-native-animated-splash-screen": "^2.0.5",
+    "react-native-codegen": "^0.70.7",
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-document-picker": "^9.3.0",
     "react-native-gesture-handler": "^2.16.0",
@@ -42,7 +46,8 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
