--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/database": "^20.1.0",
+    "@react-native-firebase/firestore": "^18.9.0",
     "@react-native-firebase/messaging": "^18.8.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -30,6 +32,8 @@
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-document-picker": "^9.3.0",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-image-base64": "^0.1.4",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
@@ -46,8 +50,8 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
-    "yup": "^1.4.0",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
