--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@preact/signals-react": "^2.0.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^20.1.0",
