--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -260,11 +260,13 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation(platform("com.google.firebase:firebase-bom:33.1.0"))
+    implementation("com.google.firebase:firebase-messaging")
+    implementation("com.google.firebase:firebase-analytics")
     //vector icon 
     implementation project(':react-native-vector-icons')
-    //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
-    implementation project(':react-native-vector-icons')
+  
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
