--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,9 +1,8 @@
 apply plugin: "com.android.application"
 apply plugin: "com.google.gms.google-services"
-apply plugin: "com.facebook.react"
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
 
 import com.android.build.OutputFile
-apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
  * and bundleReleaseJsAndAssets).
@@ -232,8 +231,6 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
@@ -260,9 +257,8 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'com.google.android.gms:play-services-location:21.0.1'
-    implementation(platform("com.google.firebase:firebase-bom:33.1.0"))
-    implementation("com.google.firebase:firebase-messaging")
-    implementation("com.google.firebase:firebase-analytics")
+    implementation platform('com.google.firebase:firebase-bom:33.6.0')
+    implementation "com.google.firebase:firebase-messaging:21.0.1"
     //vector icon 
     implementation project(':react-native-vector-icons')
     implementation "com.facebook.react:react-native:+"  // From node_modules
