--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,22 +4,12 @@ import org.apache.tools.ant.taskdefs.condition.Os
 
 buildscript {
     ext {
-        buildToolsVersion = "31.0.0"
-        minSdkVersion = 21
+        buildToolsVersion = "33.0.0"
+        minSdkVersion = 26
         compileSdkVersion = 33
-        targetSdkVersion = 31
-
-        if (System.properties['os.arch'] == "aarch64") {
-            // For M1 Users we need to use the NDK 24 which added support for aarch64
-            ndkVersion = "24.0.8215888"
-            googlePlayServicesVersion = "+" 
-            firebaseMessagingVersion = "21.1.0"
-        } else {
-            // Otherwise we default to the side-by-side NDK version from AGP.
-            ndkVersion = "21.4.7075529"
-            googlePlayServicesVersion = "+" 
-            firebaseMessagingVersion = "21.1.0"
-        }
+        targetSdkVersion = 34
+        googlePlayServicesAuthVersion = "19.2.0"
+        ndkVersion = "24.0.8215888"
     }
     repositories {
         google()
@@ -28,18 +18,18 @@ buildscript {
     dependencies {
         classpath ('com.google.gms:google-services:4.3.3')
         classpath("com.android.tools.build:gradle:7.2.2")
-        classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath("de.undercouch:gradle-download-task:5.0.1")
-       
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
 
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
+        configurations.all {
+            resolutionStrategy {
+                force 'com.facebook.react:react-native:0.64.+' //select Version you used
+            }
+        }
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
