--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,7 @@ production = ENV["PRODUCTION"] == "1"
 
 target 'ConnectVibe' do
   config = use_native_modules!
+  RNFirebaseAsStaticFramework = true
 
   # Flags change depending on the env values.
   flags = get_default_flags()
