--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-gesture-handler": "^2.16.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-base64": "^0.1.4",
+    "react-native-reanimated": "2.17.0",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-image-picker": "^7.1.2",
     "react-native-image-zoom-viewer": "^3.0.1",
